Fix spacing on Emburse cards grid

--- a/app/assets/stylesheets/components/_emburse_cards.scss
+++ b/app/assets/stylesheets/components/_emburse_cards.scss
@@ -4,7 +4,9 @@
   grid-gap: 1rem;
 
   @media (min-width: 32em) {
-    grid-gap: 4rem;
+    .comment__name {
+      margin-left: 0;
+    }
   }
 
   a {
